Creando el modulo noticias

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,8 +3,10 @@
     <head th:replace="~{layout/plantilla :: head}">    
     </head>
     <body>
-        <header th:replace="~{layout/plantilla :: header}"></header>
-
+      <!-- Vista como Cliente --> 
+      <!-- <header th:replace="~{layout/plantilla :: headerUser}"></header>--> 
+      <!-- Vista como Admin -->
+      <header th:replace="~{layout/plantilla :: headerAdmin}"></header>
         <footer th:replace="~{layout/plantilla :: footer}"></footer>
     </body>
 </html>
